@@ -1,3 +1,10 @@
+2007-08-02  Piotr Eljasiak  <epiotr@use.pl>
+
+	* src/gnome-cmd-user-actions.cc:
+	* src/gnome-cmd-user-actions.h:
+	* src/gnome-cmd-main-menu.cc:
+	Comment out not working "Edit Mime Types..."
+
 2007-08-01  Piotr Eljasiak  <epiotr@use.pl>
 
 	* src/gnome-cmd-file-props-dialog.cc:
